# tudat

Tudat/: CMakeLists.txt
Tudat/PyBindings/: CMakeLists.txt  MinimalWorkingExample.py  PyBindingsEntrypoint.cpp
Tudat/PyBindings/Astodynamics/BasicAstrodynamics/: physicalConstants.cpp  unitConversions.cpp  unitConversions.h
Tudat/PyBindings/DataStructures/: EigenWrapper.cpp  eigenWrapper.cpp  eigenWrapper.h
Tudat/PyBindings/Documentation/: Makefile  make.bat
Tudat/PyBindings/Documentation/source/: conf.py  index.rst
Tudat/PyBindings/PyTudat/: Constants.py  DataStructures.py  Propagation.py  __init__.py
Tudat/PyBindings/UnitTests/: RunningAllPythonUnitTests.txt  unitTestDataStructures.py
Tudat/PyBindings/UnitTests/Astrodynamics/: unitTestAstrodynamicsFunctions.py  unitTestCentralGravityModels.py  unitTestClohessyWiltshirePropagation.py  unitTestConstants.py  unitTestMeanToEccentricAnomalies.py  unitTestOrbitalElementsConversions.py  unitTestPhysicalConstants.py  unitTestUnitConversions.py
Tudat/PyBindings/UnitTests/DataStructures/: unitTestDataStructures.py
Tudat/PyBindings/WrapperCode/: ContainerIndexing.h
Tudat/PyBindings/WrapperCode/Astodynamics/BasicAstrodynamics/: astrodynamicsFunctions.cpp  astrodynamicsFunctions.h  physicalConstants.cpp  unitConversions.cpp
Tudat/PyBindings/WrapperCode/Astrodynamics/BasicAstrodynamics/: accelerationModel.cpp  accelerationModel.h  astrodynamicsFunctions.cpp  clohessyWiltshirePropagator.cpp  clohessyWiltshirePropagator.h  constants.cpp  constants.h  meanToEccentricAnomalies.cpp  meanToEccentricAnomalies.h  orbitalElementsConversions.cpp  orbitalElementsConversions.h  physicalConstants.cpp  physicalConstants.h  stateVectorIndices.cpp  stateVectorIndices.h  unitConversions.cpp
Tudat/PyBindings/WrapperCode/DataStructures/: dataStructuresUtility.cpp  dataStructuresUtility.h  eigenWrapper.cpp  eigenWrapper.h
Tudat/PyBindings/WrapperCode/Gravitation/: centralGravityModel.cpp  centralGravityModel.h  gravityFieldModel.cpp  gravityFieldModel.h
Tudat/PyBindings/WrapperCode/Mathematics/: rootFinder.cpp  rootFinder.h
Tudat/PyBindings/WrapperCode/SimulationSetup/: accelerationSettings.cpp  accelerationSettings.h  body.cpp  body.h  createAccelerationModels.cpp  createAccelerationModels.h  createBodies.cpp  createBodies.h  simulationPythonInterfaceInternals.cpp  simulationPythonInterfaceInternals.h
Tudat/PyBindings/WrapperCode/SimulationSetup/EnvironmentSetup/: body.cpp  createBodies.cpp  createBodies.h
